searchposition works
